--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,22 +25,19 @@ jobs:
         with:
           version: 8
 
-      # - name: Install Node.js
-      #   uses: actions/setup-node@v3
-      #   with:
-      #     node-version: 18
-      #     cache: pnpm
+      - name: Install Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: pnpm
 
-      # - name: Authenticate
-      #   run: npx google-artifactregistry-auth
+      - name: Install dependencies
+        run: pnpm install --no-frozen-lockfile
 
-      # - name: Install dependencies
-      #   run: pnpm install --no-frozen-lockfile
-
-      # - name: build
-      #   run: |
-      #     pnpm run build
-      #     touch public/.nojekyll
+      - name: build
+        run: |
+          pnpm run build
+          touch public/.nojekyll
 
       - name: Upload Artifacts
         uses: actions/upload-pages-artifact@v2
