fix issue with double custom concepts

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -35,13 +35,6 @@ steps:
     args: ['install']
     id: 'Install'
 
-  # Install again because the package from the preinstall will not be added yet
-  - name: 'node:lts'
-    waitFor: ['Install']
-    entrypoint: npm
-    args: ['install']
-    id: 'Install again'
-
   - name: 'node:lts'
     waitFor: ['Install again']
     entrypoint: npm
@@ -65,17 +58,17 @@ steps:
   #     - 'https://firebase.tools/bin/linux/latest'
   #   id: 'Download Firebase'
 
-  # # Change the rights to the tool through chmod & deploy the project with Firebase
-  # - name: 'debian:11'
-  #   waitFor: ['Download Firebase', 'Scan', 'Build']
-  #   args:
-  #     - 'bash'
-  #     - '-c'
-  #     - |
-  #       mv firebase /tmp
-  #       chmod 755 /tmp/firebase
-  #       /tmp/firebase deploy --project ${PROJECT_ID} --non-interactive -m "Build ${BUILD_ID}" --debug
-  #   id: 'Deploy to Firebase'
+  # Change the rights to the tool through chmod & deploy the project with Firebase
+  - name: 'debian:11'
+    waitFor: ['Download Firebase', 'Scan', 'Build']
+    args:
+      - 'bash'
+      - '-c'
+      - |
+        mv firebase /tmp
+        chmod 755 /tmp/firebase
+        /tmp/firebase deploy --project ${PROJECT_ID} --non-interactive -m "Build ${BUILD_ID}" --debug
+    id: 'Deploy to Firebase'
 
   # - name: 'gcr.io/cloud-builders/git'
   #   entrypoint: 'bash'
