fix some small issues

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,6 +3,7 @@ name: Deploy to GitHub Pages
 env:
   PUBLIC_CLOUD_DATABASE_IMPLEMENTATION: 'none'
   PUBLIC_CLOUD_AUTH_IMPLEMENTATION: 'none'
+  PUBLIC_VOCABULARY: ''
 
 on:
   push:
