--- a/.env
+++ b/.env
@@ -4,6 +4,8 @@ PUBLIC_ATHENA_DETAIL="https://athena.ohdsi.org/search-terms/terms/"
 PUBLIC_CLOUD_DATABASE_IMPLEMENTATION='none'
 PUBLIC_CLOUD_AUTH_IMPLEMENTATION='none'
 
+PUBLIC_VOCABULARY='AZDELTA'
+
 PUBLIC_FIREBASE_API_KEY="AIzaSyBL8AZmaIKLSXVSui7qrY6tHZTD24PcT7Y"
 PUBLIC_FIREBASE_AUTH_DOMAIN="azd-dev-keun1.firebaseapp.com"
 PUBLIC_FIREBASE_PROJECT_ID="azd-dev-keun1"
